--- a/Spider_Game.vcxproj.filters
+++ b/Spider_Game.vcxproj.filters
@@ -13,10 +13,22 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Program">
+      <UniqueIdentifier>{8d1a534f-8494-4195-a1c7-992c73eb1359}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Program\Screens">
+      <UniqueIdentifier>{1785d286-a1ca-4cda-bdcf-65942af7a872}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp">
-      <Filter>Archivos de origen</Filter>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\program.cpp">
+      <Filter>Program</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\program.h">
+      <Filter>Program</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
