--- a/Spider_Game.vcxproj
+++ b/Spider_Game.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\program.cpp" />
     <ClCompile Include="src\render.cpp" />
+    <ClCompile Include="src\spider.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\game.h" />
@@ -181,6 +182,7 @@
     <ClInclude Include="src\program.h" />
     <ClInclude Include="src\render.h" />
     <ClInclude Include="src\screens.h" />
+    <ClInclude Include="src\spider.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
