Add enemy death on collision with ball

--- a/Spider_Game.vcxproj
+++ b/Spider_Game.vcxproj
@@ -171,6 +171,7 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\collision.cpp" />
     <ClCompile Include="src\enemy.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\global.cpp" />
@@ -181,6 +182,7 @@
     <ClCompile Include="src\spider.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\collision.h" />
     <ClInclude Include="src\enemy.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\global.h" />
