Add main menu screen

--- a/Spider_Game.vcxproj
+++ b/Spider_Game.vcxproj
@@ -171,22 +171,26 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\button.cpp" />
     <ClCompile Include="src\collision.cpp" />
     <ClCompile Include="src\enemy.cpp" />
     <ClCompile Include="src\game.cpp" />
     <ClCompile Include="src\global.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\math.cpp" />
+    <ClCompile Include="src\menu.cpp" />
     <ClCompile Include="src\program.cpp" />
     <ClCompile Include="src\render.cpp" />
     <ClCompile Include="src\spider.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\button.h" />
     <ClInclude Include="src\collision.h" />
     <ClInclude Include="src\enemy.h" />
     <ClInclude Include="src\game.h" />
     <ClInclude Include="src\global.h" />
     <ClInclude Include="src\math.h" />
+    <ClInclude Include="src\menu.h" />
     <ClInclude Include="src\program.h" />
     <ClInclude Include="src\render.h" />
     <ClInclude Include="src\screens.h" />
